# stratagem

./: LICENSE.md  README.md  stratagem-1.1.sml
ocaml/: Makefile  dune  dune-project  stratagem.ml  stratagem.opam  stratagem2.ml
